--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -10,9 +10,7 @@
 
 {% block body %}
     
-    <div class="homeBanner">
-        <img class="banner" src={{ asset ('img/home/homeBanner.jpeg')}}>
-    </div>
+    <div class="homeBanner"></div>
 
     <h1 class="homeTitle">Sauvez des vies ou aidez la recherche avec votre don de sang placentaire.</h1>
     <h2 class="homeText">Lors de votre accouchement, faites le choix de faire un
