--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -2,15 +2,15 @@ $pastel : #cec0d6;
 $pastelHover : #b499c3;
 $fond :#fffdf0;
 
-
 .homeBanner{
     margin: 0 -12vw;
     margin-top: -32px;
-    .banner{
-        width: 100%;
-        height: 250px;
-        object-fit: cover;
-    }
+    background-image: url("homeBanner.jpeg");
+    min-height: 250px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .homeTitle{
