--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -88,11 +88,6 @@ $fond :#fffdf0;
     margin: auto;
 }
 
-/* Hide the images by default */
-.mySlides {
-    display: none;
-}
-
 /* Next & previous buttons */
 .prev, .next {
     cursor: pointer;
@@ -131,14 +126,6 @@ $fond :#fffdf0;
     text-align: center;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-    color: black;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
 
 /* The dots/bullets/indicators */
 .dot {
@@ -152,7 +139,7 @@ $fond :#fffdf0;
     transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.activeDot, .dot:hover {
 background-color: $pastelHover;
 }
 
