--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -58,38 +58,26 @@
 
     <h2>Témoignages :</h2>
     
+    {% for temoignage in temoignages %}
+        <!-- Slideshow container -->
+        <div class="slideshow-container">
 
-    <!-- Slideshow container -->
-    <div class="slideshow-container">
-
-        <!-- Full-width images with number and caption text -->
-        <div class="mySlides fade">
-            <div class="numbertext">1 / 3</div>
-            <div class="text">Caption Text</div>
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+                <div class="text"><p>{{temoignage.temoignage}}</p></div>
+            </div>
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
+        <br>
 
-        <div class="mySlides fade">
-            <div class="numbertext">2 / 3</div>
-            <div class="text">Caption Two</div>
+        <!-- The dots/circles -->
+        <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
         </div>
-
-        <div class="mySlides fade">
-            <div class="numbertext">3 / 3</div>
-            <div class="text">Caption Three</div>
-        </div>
-
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    </div>
-    <br>
-
-    <!-- The dots/circles -->
-    <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-    </div>
+    {% endfor %}
+    
 
     <h2>Réseau de maternités de Lymphobank :</h2>
 
@@ -119,16 +107,17 @@
         var i;
         var slides = document.getElementsByClassName("mySlides");
         var dots = document.getElementsByClassName("dot");
+        var container = document.getElementsByClassName("slideshow-container");
         if (n > slides.length) {slideIndex = 1}
         if (n < 1) {slideIndex = slides.length}
         for (i = 0; i < slides.length; i++) {
             slides[i].style.display = "none";
         }
         for (i = 0; i < dots.length; i++) {
-            dots[i].className = dots[i].className.replace(" active", "");
+            dots[i].className = dots[i].className.replace(" activeDot", "");
         }
         slides[slideIndex-1].style.display = "block";
-        dots[slideIndex-1].className += " active";
+        dots[slideIndex-1].className += " activeDot";
         }
 
         //timer
@@ -146,9 +135,9 @@
         if (slideIndex > slides.length) {slideIndex = 1}
         slides[slideIndex-1].style.display = "block";
         for (i = 0; i < dots.length; i++) {
-            dots[i].className = dots[i].className.replace(" active", "");
+            dots[i].className = dots[i].className.replace(" activeDot", "");
         }
-        dots[slideIndex-1].className += " active";
+        dots[slideIndex-1].className += " activeDot";
         setTimeout(showSlidesTimer, 5000); // Change image every 2 seconds
         }
 
