--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -86,6 +86,21 @@ $fond :#fffdf0;
     width: 100%;
     position: relative;
     margin: auto;
+    min-height:150px;
+    .title{
+        text-align: center;
+        position: absolute;
+        width: 100%;
+    }
+    .text {
+        color: black;
+        font-size: 15px;
+        position: absolute;
+        top: 50%;
+        width: 100%;
+        text-align: center;
+        margin: 1em 0;
+    }
 }
 
 /* Next & previous buttons */
@@ -100,7 +115,7 @@ $fond :#fffdf0;
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
+    border-radius: 0 15px 15px 0;
     user-select: none;
 }
 
@@ -115,16 +130,7 @@ $fond :#fffdf0;
     background-color: $pastelHover;
 }
 
-/* Caption text */
-.text {
-    color: black;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-}
+
 
 
 /* The dots/bullets/indicators */
