--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -58,14 +58,16 @@
 
     <h2>Témoignages :</h2>
     
-    {% for temoignage in temoignages %}
+    
         <!-- Slideshow container -->
         <div class="slideshow-container">
-
+            {% for temoignage in temoignages %}
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
+                <div class="title"><h2>{{temoignage.temoin}}, {{temoignage.metierTemoin}}</h2></div>
                 <div class="text"><p>{{temoignage.temoignage}}</p></div>
             </div>
+            {% endfor %}
             <!-- Next and previous buttons -->
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -76,7 +78,7 @@
         <div style="text-align:center">
             <span class="dot" onclick="currentSlide(1)"></span>
         </div>
-    {% endfor %}
+    
     
 
     <h2>Réseau de maternités de Lymphobank :</h2>
