--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -73,11 +73,15 @@
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
         <br>
-
         <!-- The dots/circles -->
         <div style="text-align:center">
-            <span class="dot" onclick="currentSlide(1)"></span>
+            {% for temoignage in temoignages %}
+                <span class="dot" onclick="currentSlide({{temoignage.id}})"></span>
+            {% endfor %}
         </div>
+        
+        
+        
     
     
 
