--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -17,7 +17,7 @@
         <!-- SideBar -->
         <div class="side-navbar active-nav d-flex justify-content-between flex-wrap flex-column" id="sidebar">
             <ul class="nav flex-column text-white w-100">
-                <a class="nav-link h3 text-white my-2 navbar-brand" href={{path ('home')}}><i class="fas fa-home"></i>InfoLBK</a>
+                <a class="nav-link h3 text-white my-2 navbar-brand" href={{path ('home')}}><i class="fas fa-home"></i>HomePage</a>
                 <hr class="sidebar-divider my-0">
                 <li href="#" class="nav-link">
                 <span class="mx-2">Tableau de bord</span>
@@ -56,7 +56,24 @@
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    
+                    <!--Bouton de logout si connecté-->
+                    <ul class="navbar-nav ms-auto">
+                        {% if app.user %}
+                            <li class="nav-item dropdown">
+                                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fas fa-user"></i> {{loggedUser.username}}
+                                </button>
+
+                                <ul class="dropdown-menu dropdown-menu-lg-end" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href={{ path ('monEspace', {id: loggedUser.username})}}>Mon espace</a></li>
+                                    <li class="nav-item">
+                                        <i class="fas fa-sign-out-alt"></i>
+                                        <a href={{path ('logout')}}>Se déconnecter</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        {% endif %}
+                    </ul>
                 </div>  
             </nav>
             <!--End Top Nav -->
