--- a/assets/styles/login.scss
+++ b/assets/styles/login.scss
@@ -128,6 +128,19 @@ body{
 }
 
 
+.error{
+  background-color: $fond;
+  border-radius: 15px;
+  color: black;
+  font-family: 'Karla', sans-serif;
+  font-weight: bold;
+  padding: 1em;
+  margin: 0 1em;
+  border: black solid 3px;
+  text-align: center;
+}
+
+
 //responsive
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
