--- a/templates/admin/admins/FormAdmins.html.twig
+++ b/templates/admin/admins/FormAdmins.html.twig
@@ -1,8 +1,9 @@
-{{form_start (form)}}
+
 <div class="row">
     <div class="col-4">
-        {{form_rest (form)}}  
-        <button class="btn btn-primary mt-4">{{button|default('Enregistrer')}}</button>
+        {{form_start (form)}}
+            {{ form_row (form.username)}}  
+            <button class="btn btn-primary mt-4">{{button|default('Enregistrer')}}</button>
+        {{form_end (form)}}
     </div>
 </div>
-{{form_end (form)}}
