--- a/assets/styles/admin/monEspace.scss
+++ b/assets/styles/admin/monEspace.scss
@@ -6,7 +6,17 @@
     padding: 1em;
 }
 
-input{
+input, #admins_form_username{
     margin: 1em 0;
-    width: 300px !important;
+    width: auto !important;
+}
+
+
+.name, .pwd{
+    height: auto;
+    border: solid 3px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    padding: 1em;
+    margin: 2em;
+    width: 400px;
 }
