--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,7 +56,7 @@
             <div class="footerContent">
                 <span>
                     <a href={{path ('about')}}>Qui sommes nous ?</a>
-                    <a href="#">Mentions légales</a>
+                    <a href={{path ('mentions')}}>Mentions légales</a>
                     <a href="#">Politique de confidentialité</a>
                 </span>
                 <span>
