--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -6,6 +6,7 @@
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('scss/home') }}
+    {{ encore_entry_link_tags('scss/map') }}
     {# leaflet map #}
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
@@ -88,19 +89,19 @@
     <h2>Réseau de maternités de Lymphobank :</h2>
 
     {% for etablissement in etablissements %}
-        <div class="js-marker" data-lat="<?={{etablissement.lat}}?>" data-lon="<?={{etablissement.lon}}?>" data-text="<?={{etablissement.Nom}}?>"></div>
+        <div class="js-marker" data-lat="{{etablissement.lat}}" data-lon="{{etablissement.lon}}" data-text="{{etablissement.Nom}}"></div>
     {% endfor %}
     
-    <div id="map" class="map">
-    
-    </div>
+    <div id="map" class="map"></div>
 
+    {# map #}
     <!-- Make sure you put this AFTER Leaflet's CSS -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
+    <script type="text/javascript" src="https://stamen-maps.a.ssl.fastly.net/js/tile.stamen.js?v1.3.0"></script>
 
-    {{ encore_entry_script_tags('js/map') }}
+    
     
     <script>
         //carousel
@@ -161,6 +162,6 @@
 {% endblock %}
 
 {% block javascripts %}
-
+    {{ encore_entry_script_tags('js/map') }}
 {% endblock %}
 
